--- a/components/pages.html
+++ b/components/pages.html
@@ -581,19 +581,6 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.10.9" data-path="tooltip.md">
-            
-                <span>
-            
-                    
-                    Tooltip
-            
-                </a>
-            
-
-            
-        </li>
-    
 
             </ul>
             
@@ -1246,7 +1233,7 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.5.1.1" data-path="learn-clt-continuous.md">
+        <li class="chapter " data-level="1.5.1.1" data-path="learn/clt-continuous.md">
             
                 <span>
             
@@ -1259,7 +1246,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.5.1.2" data-path="learn-clt-discrete.md">
+        <li class="chapter " data-level="1.5.1.2" data-path="learn/clt-discrete.md">
             
                 <span>
             
@@ -1272,7 +1259,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.5.1.3" data-path="learn-clt-sample.md">
+        <li class="chapter " data-level="1.5.1.3" data-path="learn/clt-sample.md">
             
                 <span>
             
@@ -1290,7 +1277,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.5.2" data-path="learn-conditional-probability.md">
+        <li class="chapter " data-level="1.5.2" data-path="learn/conditional-probability.md">
             
                 <span>
             
@@ -1317,9 +1304,9 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.5.3.1" data-path="learn-confidence-coverage-binomial.md">
+        <li class="chapter " data-level="1.5.3.1" data-path="learn/confidence-coverage-binomial.html">
             
-                <span>
+                <a href="learn/confidence-coverage-binomial.html">
             
                     
                     Binomial
@@ -1330,9 +1317,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.5.3.2" data-path="learn-confidence-coverage-normal.md">
+        <li class="chapter " data-level="1.5.3.2" data-path="learn/confidence-coverage-normal.html">
             
-                <span>
+                <a href="learn/confidence-coverage-normal.html">
             
                     
                     Normal
@@ -1348,9 +1335,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.5.4" data-path="learn-cross-validation.md">
+        <li class="chapter " data-level="1.5.4" data-path="learn/cross-validation.html">
             
-                <span>
+                <a href="learn/cross-validation.html">
             
                     
                     Cross-Validation
@@ -1361,9 +1348,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.5.5" data-path="learn-dice-throwing.md">
+        <li class="chapter " data-level="1.5.5" data-path="learn/dice-throwing.html">
             
-                <span>
+                <a href="learn/dice-throwing.html">
             
                     
                     Dice Throwing
@@ -1388,7 +1375,7 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.5.6.1" data-path="learn-distribution-exponential.md">
+        <li class="chapter " data-level="1.5.6.1" data-path="learn/distribution-exponential.md">
             
                 <span>
             
@@ -1401,7 +1388,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.5.6.2" data-path="learn-distribution-normal.md">
+        <li class="chapter " data-level="1.5.6.2" data-path="learn/distribution-normal.md">
             
                 <span>
             
@@ -1414,7 +1401,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.5.6.3" data-path="learn-distribution-t.md">
+        <li class="chapter " data-level="1.5.6.3" data-path="learn/distribution-t.md">
             
                 <span>
             
@@ -1427,7 +1414,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.5.6.4" data-path="learn-distribution-uniform.md">
+        <li class="chapter " data-level="1.5.6.4" data-path="learn/distribution-uniform.md">
             
                 <span>
             
@@ -1459,9 +1446,9 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.5.7.1" data-path="learn-hypothesis-testing-mean.md">
+        <li class="chapter " data-level="1.5.7.1" data-path="learn/hypothesis-testing-mean.html">
             
-                <span>
+                <a href="learn/hypothesis-testing-mean.html">
             
                     
                     Mean
@@ -1472,7 +1459,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.5.7.2" data-path="learn-hypothesis-testing-proportion.md">
+        <li class="chapter " data-level="1.5.7.2" data-path="learn/hypothesis-testing-proportion.md">
             
                 <span>
             
@@ -1490,9 +1477,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.5.8" data-path="learn-image-pixel-picker.md">
+        <li class="chapter " data-level="1.5.8" data-path="learn/image-pixel-picker.html">
             
-                <span>
+                <a href="learn/image-pixel-picker.html">
             
                     
                     Image Pixel Picker
@@ -1503,9 +1490,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.5.9" data-path="learn-mean-vs-median.md">
+        <li class="chapter " data-level="1.5.9" data-path="learn/mean-vs-median.html">
             
-                <span>
+                <a href="learn/mean-vs-median.html">
             
                     
                     Mean vs. Median
@@ -1516,9 +1503,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.5.10" data-path="learn-standardize.md">
+        <li class="chapter " data-level="1.5.10" data-path="learn/standardize.html">
             
-                <span>
+                <a href="learn/standardize.html">
             
                     
                     Standardize
@@ -1529,9 +1516,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.5.11" data-path="learn-venn-diagram-builder.md">
+        <li class="chapter " data-level="1.5.11" data-path="learn/venn-diagram-builder.html">
             
-                <span>
+                <a href="learn/venn-diagram-builder.html">
             
                     
                     Venn Diagram Builder
@@ -1542,9 +1529,9 @@
             
         </li>
     
-        <li class="chapter " data-level="1.5.12" data-path="learn-word-venn-diagram.md">
+        <li class="chapter " data-level="1.5.12" data-path="learn/word-venn-diagram.html">
             
-                <span>
+                <a href="learn/word-venn-diagram.html">
             
                     
                     Word Venn Diagram
@@ -1765,7 +1752,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Pages","level":"1.4.4.5","depth":3,"next":{"title":"Slider","level":"1.4.4.6","depth":3,"path":"components/slider.md","ref":"components/slider.md","articles":[]},"previous":{"title":"Grid","level":"1.4.4.4","depth":3,"path":"components/grid.md","ref":"components/grid.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/pages.md","mtime":"2017-12-27T18:29:51.359Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T12:53:13.746Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Pages","level":"1.4.4.5","depth":3,"next":{"title":"Slider","level":"1.4.4.6","depth":3,"path":"components/slider.md","ref":"components/slider.md","articles":[]},"previous":{"title":"Grid","level":"1.4.4.4","depth":3,"path":"components/grid.md","ref":"components/grid.md","articles":[]},"dir":"ltr"},"config":{"plugins":["expandable-chapters","edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"expandable-chapters":{},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/pages.md","mtime":"2017-12-27T18:29:51.359Z","type":"markdown"},"gitbook":{"version":"3.2.2","time":"2017-12-30T14:51:40.432Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
