--- a/app/components/feedback/feedback.css
+++ b/app/components/feedback/feedback.css
@@ -1,10 +1,25 @@
 .icon {
 	height: 32px;
 	width: 32px;
-	opacity: 0.5;
+	box-shadow: none;
+	transform: scale(1.1);
 }
 
 .icon:hover {
 	opacity: 1;
 	cursor: pointer;
+	outline: none;
+}
+
+.feedback-button {
+	fill: rgba(92,92,92,0.6);
+	transition: 0.3;
+	border:solid 1px rgba(92,92,92,0.4);
+	margin-right: 1px;
+}
+
+.feedback-button:hover {
+	transition: 0.3;
+	border:solid 1px #ca5800;
+	fill: #ca5800;
 }
