--- a/app/components/r/help/rhelp.css
+++ b/app/components/r/help/rhelp.css
@@ -1,3 +1,13 @@
+.r-help-modal {
+	left: auto;
+	padding: 10px;
+	position: fixed;
+	top: 0px;
+	right: 30px;
+	z-index: 99999;
+	overflow: hidden;
+}
+
 .r-help-modal-body {
 	height: 400px;
 	overflow: auto;
