--- a/app/components/free-text-question/free-text-question.css
+++ b/app/components/free-text-question/free-text-question.css
@@ -1,13 +1,18 @@
 .free-text-question {
-	border: 1px solid  rgba(92,92,92, 0.6);
+	border: 1px solid rgba(92,92,92,0.6);
 	border-radius: 6px;
-    box-shadow: 0 0 4px rgba(92,92,92, 0.5);
-
+	box-shadow: 0 0 4px rgba(92,92,92,0.5);
 }
 
 .free-text-question label {
-    font-stretch: extra-expanded;
+	font-stretch: extra-expanded;
 	font-weight: 500;
 	color: #2e4468;
 	text-shadow: 0 0 1px  rgba(92,92,92, 0.5);
+}
+
+.free-text-question-toolbar {
+	margin-top: 8px;
+	margin-bottom: 4px;
+	float: right;
 }
