--- a/app/components/news/styles.css
+++ b/app/components/news/styles.css
@@ -91,6 +91,10 @@
     margin-right: 2%;
     margin-bottom: 30px;
     box-shadow: 2px 2px 10px darkslategray;
+
+    border: 1px solid rgba(92,92,92,0.3);
+	border-radius: 6px;
+	box-shadow: 0 0 8px rgba(92,92,92,0.5);
 }
 
 .article img {
