--- a/app/components/multiple-choice-question/multiple-choice-styles.css
+++ b/app/components/multiple-choice-question/multiple-choice-styles.css
@@ -2,14 +2,14 @@
 	border: 1px solid  rgba(92,92,92, 0.6);
 	border-radius: 6px;
 	box-shadow: 0 0 8px rgba(92,92,92, 0.5);
-	width: 75%;
+	margin: 0 auto 10px;
+	margin-top: 8px;
+	max-width: 900px;
 }
-
 
 .multiple-choice-answer .list-group-item {
 	background: orange !important;
 }
-
 
 .multiple-choice-answer {
 	line-height: 22px !important;
