--- a/app/components/number-question/number-question.css
+++ b/app/components/number-question/number-question.css
@@ -2,9 +2,10 @@
 	border: 1px solid  rgba(92,92,92, 0.6);
 	border-radius: 6px;
 	box-shadow: 0 0 4px rgba(92,92,92, 0.5);
-	max-width: 650px;
+	margin: 0 auto 10px;
+	margin-top: 8px;
+	max-width: 900px;
 }
-
 
 .number-question label {
 	font-weight: 500;
