--- a/app/components/markdown-editor/markdown-editor.css
+++ b/app/components/markdown-editor/markdown-editor.css
@@ -5,6 +5,10 @@
 	margin-bottom: 15px;
 }
 
+.editor-toolbar.fullscreen, .CodeMirror-fullscreen, .editor-preview-side {
+	z-index: 1002 !important;
+}
+
 .editor-toolbar {
 	background: ghostwhite;
 	opacity: 0.6;
