--- a/app/components/data-explorer/data_explorer.css
+++ b/app/components/data-explorer/data_explorer.css
@@ -5,3 +5,21 @@
 .data-explorer-questions {
 	margin-top: 0;
 }
+
+.data-explorer-navbar {
+	font-size: 18px;
+	color: #2e4468;
+	font-weight: 600;
+	background: rgba(176, 192, 222, 0.15);
+	margin-bottom: 0px;
+}
+
+.data-explorer-output-header {
+	font-size: 18px;
+	color: #2e4468;
+	font-weight: 600;
+	margin-bottom: 0px;
+	float: left;
+	margin-top: 0;
+	margin-bottom: 0;
+}
