--- a/app/components/data-table/data_table.css
+++ b/app/components/data-table/data_table.css
@@ -14,6 +14,13 @@
 	letter-spacing: 2.5px;
 }
 
+.title-nobutton-h4 {
+	text-align: center;
+	margin-top: 0px;
+	font-size: 21px;
+	letter-spacing: 2.5px;
+}
+
 .variable-description-button {
 	float: right;
 	margin-top: -2px;
