--- a/app/components/recorder/recorder.css
+++ b/app/components/recorder/recorder.css
@@ -1,7 +1,7 @@
 .recorder-container {
 	position: fixed;
 	right: 2%;
-	top: 0.5%;
+	top: 5px;
 	width: 320px;
 	height: auto;
 	text-align: right;
@@ -16,7 +16,7 @@
 }
 
 .recorder-button-container {
-	position: fixed;
+	position: absolute;
 	border-radius: 50%;
 	margin-right: 10px;
 	color: rgba(0,0,0,1);
