--- a/app/components/recorder/recorder.css
+++ b/app/components/recorder/recorder.css
@@ -2,13 +2,17 @@
 	position: fixed;
 	right: 2%;
 	top: 5px;
-	width: 320px;
 	height: auto;
 	text-align: right;
+	min-width: 120px;
 	z-index: 1002;
 	background: rgba(0, 80,255,0.5);
 	box-shadow: 2px 2px 10px black;
 	cursor: default;
+}
+
+.recorder-togglebutton {
+	box-shadow: none !important;
 }
 
 .recorder-in-editor {
@@ -22,9 +26,9 @@
 	color: rgba(0,0,0,1);
 	border: solid 4px rgb(70,70,70);
 	top: 8px;
-	width: 40px;
-	height: 40px;
-	right: 265px;
+	width: 30px;
+	height: 30px;
+	right: 80px;
 }
 
 .recorder-button-container:hover {
@@ -33,7 +37,7 @@
 
 .recorder-rec {
 	font-family: Arial;
-	font-size: 40px;
+	font-size: 30px;
 	font-weight: 800;
 	margin-right: 8px;
 }
@@ -41,12 +45,11 @@
 .recorder-button {
 	position: absolute;
 	border-radius: 50%;
-	width: 22px;
-	height: 22px;
-	top: 5px;
-	left: 5px;
+	width: 16px;
+	height: 16px;
+	top: 3px;
+	left: 3px;
 	cursor: pointer;
-	margin-right: 25px;
 }
 
 .recorder-rec:hover {
