--- a/app/css/lesson.css
+++ b/app/css/lesson.css
@@ -61,48 +61,48 @@ body {
 	display: block;
 }
 
-.Lesson .panel-heading {
+.panel-heading {
 	background-image: none;
 	background: rgba(176, 192, 222, 0.15);
 
 }
 
-.Lesson .panel-default {
+.panel-default {
 	border: 1px solid  rgba(92,92,92, 0.6);
 	border-radius: 6px;
 	box-shadow: 0 0 8px rgba(92,92,92, 0.5);
 }
 
-.Lesson .popover {
+.popover {
 	font-family: 'Open Sans', sans-serif;
 }
 
-.Lesson .btn {
+.btn {
 	font-family: 'Open Sans', sans-serif;
 	box-shadow: 1px 0px 2px rgba(60, 60, 60, 1), inset 1px 0px 2px rgba(160, 160, 160, 1);
 }
 
-.Lesson .btn-primary {
+.btn-primary {
 	background: #2e4468;
 	border-color: black;
 }
 
-.Lesson .btn-primary:focus, .btn-primary.focus  {
+.btn-primary:focus, .btn-primary.focus  {
 	box-shadow: 1px 1px 5px white;
 }
 
-.Lesson .btn-primary:hover {
+.btn-primary:hover {
 	box-shadow: inset 1px 1px 5px white;
 	transition: 0.3s;
 }
 
-.Lesson .btn-primary.disabled, .btn-primary:disabled {
+.btn-primary.disabled, .btn-primary:disabled {
 	box-shadow: none !important;
 	background-color: #0275d8;
 	border-color: #0275d8;
 }
 
-.Lesson .btn-primary:active, .btn-primary.active,
+.btn-primary:active, .btn-primary.active,
 .show > .btn-primary.dropdown-toggle {
 	color: #fff;
 	background-color: #025aa5;
@@ -110,27 +110,27 @@ body {
 	border-color: #01549b;
 }
 
-.Lesson .btn-success {
+.btn-success {
 	background: #3c763d;
 	border-color: black;
 }
 
-.Lesson .btn-success:hover {
+.btn-success:hover {
 	box-shadow: inset 1px 1px 5px white;
 	transition: 0.3s;
 }
 
-.Lesson .btn-success:focus, .btn-success.focus {
+.btn-success:focus, .btn-success.focus {
 	box-shadow: 1px 1px 5px white;
 }
 
-.Lesson .btn-success.disabled, .btn-success:disabled {
+.btn-success.disabled, .btn-success:disabled {
 	box-shadow: none !important;
 	background-color: #5cb85c;
 	border-color: #5cb85c;
 }
 
-.Lesson .btn-success:active, .btn-success.active,
+.btn-success:active, .btn-success.active,
 .show > .btn-success.dropdown-toggle {
 	color: #fff;
 	background-color: #449d44;
@@ -138,40 +138,40 @@ body {
 	border-color: #419641;
 }
 
-.Lesson .btn-xs {
+.btn-xs {
 	box-shadow: none;
 }
 
-.Lesson .btn-group-xs {
+.btn-group-xs {
 	box-shadow: none;
 }
 
-.Lesson .well {
+.well {
 	background-image: none;
 	background-color: gainsboro;
 }
 
-.Lesson .date-selection {
+.date-selection {
 	box-shadow: none;
 	border: 1px solid rbg(64,64,64);
 }
 
-.Lesson .active-button {
+.active-button {
 	background: slategray;
 	color: white;
 	text-shadow: none;
 }
 
-.Lesson .actionNote {
+.actionNote {
 	white-space: pre-wrap;
 }
 
-.Lesson .clickable {
+.clickable {
 	background: transparent;
 	cursor: pointer;
 }
 
-.Lesson .clickable:hover {
+.clickable:hover {
 	background: lightcoral;
 }
 
@@ -255,4 +255,8 @@ body {
 	display: block;
 	margin: 0 auto;
 	text-align: center;
+}
+
+.Presentation .katex {
+	font: normal 2.21rem KaTeX_Main,Times New Roman,serif;
 }
