--- a/app/css/lesson.css
+++ b/app/css/lesson.css
@@ -61,10 +61,15 @@ body {
 	display: block;
 }
 
+.Presentation {
+	width: 100%;
+	height: 100%;
+	display: block;
+}
+
 .panel-heading {
 	background-image: none;
 	background: rgba(176, 192, 222, 0.15);
-
 }
 
 .panel-default {
