--- a/app/components/select-question/select-question.css
+++ b/app/components/select-question/select-question.css
@@ -1,16 +1,19 @@
 .select-question {
 	border: 1px solid  rgba(92,92,92, 0.6);
 	border-radius: 6px;
-    box-shadow: 0 0 4px rgba(92,92,92, 0.5);
-    width: 100%;
-    max-width: 650px;
-    font-family: Open Sans;
+	box-shadow: 0 0 4px rgba(92,92,92, 0.5);
+	width: 100%;
+	max-width: 650px;
+	font-family: Open Sans;
 }
 
 
-.select-question-option
-{
-color: rgba(92,92,92, 1)
+.select-question-option {
+	color: rgba(92,92,92, 1)
 }
 
-
+.select-question-toolbar {
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+}
